Fix Animex Plugins instant launch crash
Contain startup failures, defer WebView initialization, add diagnostics, and bump the separate plugin app to 0.1.1-alpha.